--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ collections:
   staff:
     people: true
     output: true
+navigation:
+  - name: "À propos"
+    url: "/about"
 sass:
   sass_dir: _sass
   style: compressed
